[gd_scene load_steps=7 format=2]

[ext_resource path="res://Scenes/HUD.gd" type="Script" id=1]
[ext_resource path="res://Art/Fonts/Market_Deco.ttf" type="DynamicFontData" id=2]

[sub_resource type="DynamicFont" id=1]
size = 50
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 50
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=3]
size = 60
outline_color = Color( 0.980392, 0, 0, 1 )
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=4]
size = 50
font_data = ExtResource( 2 )

[node name="HUD" type="Control" groups=[
"HUD",
]]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="Player1Damage" type="Label" parent="."]
margin_right = 40.0
margin_bottom = 14.0
custom_fonts/font = SubResource( 1 )
text = "PLACEHOLDER"

[node name="Player2Damage" type="Label" parent="."]
margin_left = 723.0
margin_right = 1028.0
margin_bottom = 55.0
custom_fonts/font = SubResource( 2 )
text = "PLACEHOLDER"

[node name="WinLabel" type="Label" parent="."]
margin_left = 13.0646
margin_top = 221.519
margin_right = 619.065
margin_bottom = 331.519
custom_fonts/font = SubResource( 3 )
text = "PLACEHOLDER"

[node name="Button" type="Button" parent="."]
margin_left = 268.0
margin_top = 404.0
margin_right = 697.0
margin_bottom = 528.0
custom_fonts/font = SubResource( 4 )
text = "Restart Game"

[node name="MobileControls" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0
[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
